<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">
    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="match_parent"
        android:max="100"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="33dp"
        android:padding="30dp"
        android:layout_below="@+id/progressbar_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_launcher_logo"
            android:drawableLeft="@mipmap/ic_launcher_logo"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/colorDarkRed"
            android:text="@string/logo_text"/>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:hint="@string/et_account"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/et_password"/>
        <!--android:background="#16A2D3"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:background="@color/colorDarkRed"
                android:textColor="#ffffff"
                android:text="@string/btn_login"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/btn_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:background="@color/colorDarkRed"
                android:textColor="#ffffff"
                android:text="@string/btn_return"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorDarkRed"
                android:textSize="16sp"
                android:text="@string/tv_forgetpwd"/>
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorDarkRed"
                android:textSize="16sp"
                android:text="@string/tv_signup"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:id="@+id/leftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:text="@string/tv_msg_bottom"/>
        <TextView
            android:layout_toRightOf="@+id/leftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorDarkRed"
            android:text="@string/tv_msg_serviceitem"/>
    </LinearLayout>

</RelativeLayout>